画像最適化とファビコン追加

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>kota-portfolio</title>
+    <meta name="description" content="kotaのプログラミングポートフォリオサイトです。">
+    <link rel="icon" href="./img/favicon.ico">
     <script>
         (function (d) {
             var config = {
