--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <h2>web <br><span class="skill-point">■■■■□□□□□□</span></h2>
                     <p>HTML、CSSの基本はわかる。<br>
                         簡単なwebページなら製作可能。<br>
-                        Javascriptは勉強中。<br>
+                        JavaScriptは勉強中。<br>
                     </p>
                 </div>
                 
