スキルの編集と作品の追加

--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
                 <div id="img1" class="profile-block">
                     <img src="./img/profileicon.jpg" alt="icon" width="45%" id="icon">
                     <p>Kota<br><br>
-                        16歳の高校1年生。<br>
-                        現在は春期FEの勉強中。
+                        16歳/高校1年生
                     </p>
                 </div>
                 <div id="text1" class="profile-block">
@@ -125,6 +124,14 @@
                     </p>
                 </div>
             </div>
+            <div class="skill-other">
+                <h3>その他</h3>
+                <ul>
+                    <li>Node.js/Express</li>
+                    <li>Git</li>
+                    <li>Firebase</li>
+                </ul>
+            </div>
         </div>
 
         <div class="work" id="3">
@@ -157,6 +164,21 @@
                 </div>
                 <div id="port-img" class="port-block">
                     <img src="./img/kotaportfolio.png" alt="portfolio-img" width="100%">
+                </div>
+            </div>
+            <div class="brain-parent">
+                <div id="brain-text" class="brain-block">
+                    <a href="https://storm-webrain.herokuapp.com/"><h4>WeBrain（チャットアプリ）</h4></a>
+                    <p>「ブレインストーミング」で出たアイデアを<br>
+                        メンバーとチャットで共有できる<br>
+                        webアプリを作りました。<br>
+                        Node.js/Expressを使っています。<br>
+                        チャットの送受信と保存はFirebaseの<br>
+                        RealtimeDatabaseを使っています。<br>
+                    </p>
+                </div>
+                <div id="brain-img" class="brain-block">
+                    <a href="https://storm-webrain.herokuapp.com/"><img src="./img/webrain.png" alt="webrain-img" width="100%"></a>
                 </div>
             </div>
         </div>
