リンクを別タブで開くように修正

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
                 </div>
                 <div id="brain-img" class="brain-block">
-                    <a href="https://storm-webrain.herokuapp.com/"><img src="./img/webrain.png" alt="webrain-img" width="100%"></a>
+                    <a href="https://storm-webrain.herokuapp.com/" target="_blank"><img src="./img/webrain.png" alt="webrain-img" width="100%"></a>
                 </div>
             </div>
         </div>
